--- a/MWM/WidgetTimeSettingView.xib
+++ b/MWM/WidgetTimeSettingView.xib
@@ -39,13 +39,14 @@
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUISegmentedControl" id="38314696">
 						<reference key="NSNextResponder" ref="472210907"/>
-						<int key="NSvFlags">-2147483356</int>
-						<string key="NSFrame">{{18, 35}, {218, 30}}</string>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{18, 20}, {218, 30}}</string>
 						<reference key="NSSuperview" ref="472210907"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="601411053"/>
+						<reference key="NSNextKeyView" ref="54934922"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
+						<int key="IBUITag">3001</int>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBSegmentControlStyle">2</int>
 						<int key="IBNumberOfSegments">2</int>
@@ -75,18 +76,59 @@
 							<bytes key="NSRGB">MC4zMjQxMzU0MjYxIDAuNjQ5NTYxMTE4NSAwLjgzNTI5NDExNzYAA</bytes>
 						</object>
 					</object>
-					<object class="IBUISwitch" id="448401263">
+					<object class="IBUISegmentedControl" id="822850410">
 						<reference key="NSNextResponder" ref="472210907"/>
-						<int key="NSvFlags">-2147483356</int>
-						<string key="NSFrame">{{139, 86}, {94, 27}}</string>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{18, 99}, {218, 30}}</string>
 						<reference key="NSSuperview" ref="472210907"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<bool key="IBUIOpaque">NO</bool>
+						<int key="IBUITag">3003</int>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<int key="IBSegmentControlStyle">2</int>
+						<int key="IBNumberOfSegments">2</int>
+						<int key="IBSelectedSegmentIndex">0</int>
+						<array key="IBSegmentTitles">
+							<string>Month First</string>
+							<string>Day First</string>
+						</array>
+						<array class="NSMutableArray" key="IBSegmentWidths">
+							<real value="0.0"/>
+							<real value="0.0"/>
+						</array>
+						<array class="NSMutableArray" key="IBSegmentEnabledStates">
+							<boolean value="YES"/>
+							<boolean value="YES"/>
+						</array>
+						<array class="NSMutableArray" key="IBSegmentContentOffsets">
+							<string>{0, 0}</string>
+							<string>{0, 0}</string>
+						</array>
+						<array class="NSMutableArray" key="IBSegmentImages">
+							<reference ref="4"/>
+							<reference ref="4"/>
+						</array>
+						<object class="NSColor" key="IBTintColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MC4zMjQxMzU0MjYxIDAuNjQ5NTYxMTE4NSAwLjgzNTI5NDExNzYAA</bytes>
+						</object>
+					</object>
+					<object class="IBUISwitch" id="448401263">
+						<reference key="NSNextResponder" ref="472210907"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{140, 60}, {94, 27}}</string>
+						<reference key="NSSuperview" ref="472210907"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="822850410"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MC40NjU1OTQwNDA1IDAuNTc3MjU2NTkxIDAuODM1Mjk0MTE3NiAwAA</bytes>
 						</object>
 						<bool key="IBUIOpaque">NO</bool>
+						<int key="IBUITag">3002</int>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
@@ -97,8 +139,8 @@
 					</object>
 					<object class="IBUILabel" id="54934922">
 						<reference key="NSNextResponder" ref="472210907"/>
-						<int key="NSvFlags">-2147483356</int>
-						<string key="NSFrame">{{19, 89}, {115, 21}}</string>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{20, 63}, {115, 21}}</string>
 						<reference key="NSSuperview" ref="472210907"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="448401263"/>
@@ -106,7 +148,6 @@
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
-						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<string key="IBUIText">Show Seconds</string>
 						<object class="NSColor" key="IBUITextColor">
@@ -126,46 +167,11 @@
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
-					<object class="IBUILabel" id="601411053">
-						<reference key="NSNextResponder" ref="472210907"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{20, 63}, {214, 15}}</string>
-						<reference key="NSSuperview" ref="472210907"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="54934922"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<bool key="IBUIOpaque">NO</bool>
-						<bool key="IBUIClipsSubviews">YES</bool>
-						<int key="IBUIContentMode">7</int>
-						<bool key="IBUIUserInteractionEnabled">NO</bool>
-						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<string key="IBUIText">This widget currently has no settings.</string>
-						<object class="NSColor" key="IBUITextColor">
-							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MSAxIDEAA</bytes>
-							<object class="NSColorSpace" key="NSCustomColorSpace">
-								<int key="NSID">1</int>
-							</object>
-						</object>
-						<nil key="IBUIHighlightedColor"/>
-						<int key="IBUIBaselineAdjustment">0</int>
-						<float key="IBUIMinimumFontSize">10</float>
-						<int key="IBUITextAlignment">1</int>
-						<object class="IBUIFontDescription" key="IBUIFontDescription">
-							<int key="type">1</int>
-							<double key="pointSize">12</double>
-						</object>
-						<object class="NSFont" key="IBUIFont">
-							<string key="NSName">Helvetica</string>
-							<double key="NSSize">12</double>
-							<int key="NSfFlags">16</int>
-						</object>
-					</object>
 				</array>
 				<string key="NSFrameSize">{254, 148}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView"/>
+				<reference key="NSNextKeyView" ref="38314696"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -202,18 +208,13 @@
 							<reference ref="38314696"/>
 							<reference ref="448401263"/>
 							<reference ref="54934922"/>
-							<reference ref="601411053"/>
+							<reference ref="822850410"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">12</int>
 						<reference key="object" ref="38314696"/>
-						<reference key="parent" ref="472210907"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">15</int>
-						<reference key="object" ref="601411053"/>
 						<reference key="parent" ref="472210907"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -226,6 +227,11 @@
 						<reference key="object" ref="54934922"/>
 						<reference key="parent" ref="472210907"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">17</int>
+						<reference key="object" ref="822850410"/>
+						<reference key="parent" ref="472210907"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -236,13 +242,13 @@
 				<string key="12.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="13.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="14.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="15.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="17.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">16</int>
+			<int key="maxID">17</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
