--- a/MWM/TestViewController.xib
+++ b/MWM/TestViewController.xib
@@ -84,7 +84,7 @@
 						<bool key="IBUIMultipleTouchEnabled">YES</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<bool key="IBUIEditable">NO</bool>
-						<string key="IBUIText">Enabling "Write without response" will significantly drcrease the time to update the watch screen, but makes the communication unreliable.</string>
+						<string key="IBUIText">Enabling "Write without response" will significantly decrease the time to update the watch screen, but makes the communication unreliable.</string>
 						<object class="NSColor" key="IBUITextColor" id="83112399">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MCAwIDAAA</bytes>
