--- a/MWM/TestViewController.xib
+++ b/MWM/TestViewController.xib
@@ -84,7 +84,7 @@
 						<bool key="IBUIMultipleTouchEnabled">YES</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<bool key="IBUIEditable">NO</bool>
-						<string key="IBUIText">Enabling "Write without response" will significantly drcrease the time to update the watch screen, but makes the communication unreliable.</string>
+						<string key="IBUIText">Enabling "Write without response" will significantly decrease the time to update the watch screen, but makes the communication unreliable.</string>
 						<object class="NSColor" key="IBUITextColor" id="83112399">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MCAwIDAAA</bytes>
@@ -162,6 +162,7 @@
 						<string key="NSFrame">{{77, 226}, {166, 37}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
